--- a/package.json
+++ b/package.json
@@ -2,16 +2,34 @@
   "name": "node-apps",
   "version": "1.0.0",
   "description": "",
-  "main": "promises.test.js",
+  "main": "index.js",
   "directories": {
     "doc": "docs"
   },
   "dependencies": {
-    "jest": "^24.8.0"
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.1",
+    "eslint": "^5.16.0",
+    "express": "^4.17.0",
+    "jest": "^24.8.0",
+    "jsdoc": "^3.6.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.5.11",
+    "mongoose-schema-jsonschema": "^1.2.1",
+    "morgan": "^1.9.1",
+    "pg": "^7.11.0",
+    "superagent": "^5.0.5",
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^4.0.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "lint": "eslint **/*.js",
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage",
+    "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json"
   },
   "keywords": [],
   "author": "",
